--- a/crawler/requirements.txt
+++ b/crawler/requirements.txt
@@ -10,6 +10,7 @@ idna==2.6
 ipaddress==1.0.22  # Updated from 1.0.18
 kafka-python==1.4.3  # Updated from 1.3.4
 kazoo==2.4.0
+beautifulsoup4==4.10.0
 lxml==4.2.1  # Updated from 3.8.0
 mock==2.0.0
 nose==1.3.7
