--- a/crawler/requirements.txt
+++ b/crawler/requirements.txt
@@ -38,4 +38,12 @@ Twisted==18.4.0  # Updated from 17.5.0
 ujson==1.35
 w3lib==1.19.0  # Updated from 1.18.0
 zope.interface==4.5.0  # Updated from 4.4.2
+pymongo==4.1.1
+python-dotenv==0.20.0
+pydantic==1.9.1
+phantomjs==1.4.1
+scrapy-splash==0.8.0
+mysql-connector-python==8.0.30
+SQLAlchemy==1.4.25
+Flask-MySQL==1.5.2
 # Generated with piprot 0.9.10
