--- a/crawler/requirements.txt
+++ b/crawler/requirements.txt
@@ -5,6 +5,7 @@ cryptography==2.3
 cssselect==1.0.3  # Updated from 1.0.1
 enum34==1.1.6
 funcsigs==1.0.2
+pygtail==0.12.0
 future==0.16.0
 idna==2.6
 ipaddress==1.0.22  # Updated from 1.0.18
