--- a/crawler/requirements.txt
+++ b/crawler/requirements.txt
@@ -8,6 +8,9 @@ APScheduler==3.9.1
 funcsigs==1.0.2
 pygtail==0.12.0
 future==0.16.0
+flask-marshmallow==0.14.0
+sqlalchemy-pagination==0.0.2
+yagmail==0.15.293
 idna==2.6
 ipaddress==1.0.22  # Updated from 1.0.18
 kafka-python==1.4.3  # Updated from 1.3.4
