--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ MarkupSafe==1.1
 pygtail==0.12.0
 APScheduler==3.9.1
 PyDispatcher==2.0.5
+flask-marshmallow==0.14.0
+sqlalchemy-pagination==0.0.2
+yagmail==0.15.293
 PyYAML==3.12
 Scrapy==1.5.0  # Updated from 1.4.0
 Twisted==18.4.0  # Updated from 17.5.0
